package it.unibs.ingsw.destinazioni.domain.dto;

public record LoginResponseDTO(String nickname, String role, boolean firstLogin) {}