package it.unibs.ingsw.destinazioni.domain.dto;

public record TownProvinceDTO(
        String town,
        String province
) {}